@@ -1,3 +1,5 @@
+03/04/2013 Verification of tableau calculus specifications
+
 31/03/2013 Check for overwrite of generated files
 
 04/02/2013 Intuitionistic logic case study
